Updated the example to comment out the blocklist address as most likely not needed.

--- a/smart-contracts/.env.example
+++ b/smart-contracts/.env.example
@@ -26,4 +26,4 @@ NETWORK_URL="https://eth-rinkeby.alchemyapi.io/v2/<API_KEY>"
 BRIDGEBANK_ADDRESS="0xB5F54ac4466f5ce7E0d8A5cB9FE7b8c0F35B7Ba8"
 
 # Blocklist Contract Address (Only Set This if Upgrading a BridgeBank that does not currently support the blocklist)
-BLOCKLIST_ADDRESS="0xa74d631Ac62F028b839a60251E9e3Cf905736826"
+# BLOCKLIST_ADDRESS="0xa74d631Ac62F028b839a60251E9e3Cf905736826"
