--- a/.github/workflows/ui-stack.yml
+++ b/.github/workflows/ui-stack.yml
@@ -2,13 +2,17 @@ name: Frontend compatability testing
 
 on:
   push:
-    branches:
-      # Here we list all branches that will build ui-stack when merged to
-      # Feel free to add feature branches for work in progress testing
-      # However once features are shipped this should be updated
-      - develop
-      - master
-      - testnet
+    paths-ignore:
+      - "ui/**"
+# on:
+#   push:
+#     branches:
+#       # Here we list all branches that will build ui-stack when merged to
+#       # Feel free to add feature branches for work in progress testing
+#       # However once features are shipped this should be updated
+#       - develop
+#       - master
+#       - testnet
 
 jobs:
   build_ui_stack:
