Disable running unit tests in integration test actions

--- a/.github/workflows/smart-contracts.yml
+++ b/.github/workflows/smart-contracts.yml
@@ -2,9 +2,11 @@ name: Smart Contracts
 
 on:
   pull_request:
-    paths: ['smart-contracts/**']
+    paths-ignore:
+      - "ui/**"
   push:
-    paths: ['smart-contracts/**']
+    paths-ignore:
+      - "ui/**"
 
 jobs:
   test:
