--- a/proto/buf.yaml
+++ b/proto/buf.yaml
@@ -1,11 +1,4 @@
-version: v1beta1
-
-build:
-  roots:
-    - proto
-    - third_party/proto
-  excludes:
-    - third_party/proto/google/protobuf
+version: v1
 lint:
   use:
     - DEFAULT
@@ -25,13 +18,6 @@ lint:
     - RPC_RESPONSE_STANDARD_NAME
     - SERVICE_SUFFIX
     - UNARY_RPC
-  ignore:
-    - gogoproto
-    - google
-    - cosmos
-
 breaking:
   use:
     - FILE
-  ignore:
-    - gogoproto
