--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -25,12 +25,14 @@
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
+    "@types/pg": "^8.6.5",
     "@types/yargs": "^17.0.2",
     "axios": "^0.21.4",
     "big-integer": "^1.6.48",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^3.0.0",
+    "coingecko-api-v3": "^0.0.13",
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.4",
@@ -41,6 +43,7 @@
     "hardhat-gas-reporter": "^1.0.4",
     "mocha": "^9.0.3",
     "openzeppelin-solidity": "^2.5.1",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "solidity-coverage": "^0.7.16",
     "truffle-contract": "^4.0.31",
