Restore old golang linting behavior

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,19 +12,18 @@ linters:
 #    - gocritic
 #    - gofmt
 #    - goimports
-    - golint
+    # - golint
     - gosec
     - govet
     - ineffassign
 #    - interfacer
-    - maligned
+    # - fieldalignment
     - misspell
     - nakedret
     - prealloc
-    - scopelint
-    - staticcheck
+    # - scopelint
+    # - staticcheck
     - structcheck
-    - stylecheck
     - typecheck
     - unconvert
     - unused
@@ -32,6 +31,8 @@ linters:
     - errcheck
   disable:
     - gosimple
+    - staticcheck
+    - stylecheck
 
 issues:
   exclude-rules:
@@ -52,7 +53,7 @@ linters-settings:
   goconst:
     min-occurrences: 4
   dogsled:
-    max-blank-identifiers: 7
+    max-blank-identifiers: 8
   maligned:
     # print struct with more effective memory layout or not, false by default
     suggest-new: true
