--- a/.github/workflows/integrationtest2.yml
+++ b/.github/workflows/integrationtest2.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Run integration tests
         run: |
           source ~/.bash_profile
+          ./test/integration/framework/siftool generate-python-protobuf-stubs
           sleep 30
           pushd test/integration && framework/venv/bin/python3 -m pytest -olog_level=DEBUG -olog_file=/tmp/int-test.out -v src/peggy2/test_eth_transfers.py src/peggy2/test_peggy2_wrong_signature.py
 
