--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,18 +7,28 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2.5.2
+      - uses: actions/setup-go@v3
         with:
-          version: v1.45.2
+          go-version: 1.18
+      - uses: actions/checkout@v2
+      - name: Install geth
+        run: sudo add-apt-repository -y ppa:ethereum/ethereum && sudo apt-get update && sudo apt-get install ethereum
+      - name: install smart contracts first
+        run: make install-smart-contracts
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3.2.0
+        with:
+          version: v1.47.3
   test:
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
+    - name: show version of make itself
+      run: make -v
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
       with:
-        go-version: ^1.15
+        go-version: 1.18
       id: go
 
     - name: Check out code into the Go module directory
@@ -26,6 +36,10 @@ jobs:
 
     - name: Install geth
       run: sudo add-apt-repository -y ppa:ethereum/ethereum && sudo apt-get update && sudo apt-get install ethereum
+    - name: install golangcli-lint
+      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.47.3
+    - name: show version of make itself
+      run: make -v
 
     - name: Lint
       run: make lint
