Prevent use of yarn for smart contracts.  (It doesn't work and fails in subtle ways)

--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -96,5 +96,8 @@
   "dependencies": {
     "concurrently": "^6.2.0",
     "truffle": "^5.4.7"
+  },
+  "engines": {
+    "yarn": "999999999"
   }
 }
