Update test file to proper code style. Update prettier config

--- a/smart-contracts/.prettierrc
+++ b/smart-contracts/.prettierrc
@@ -27,7 +27,8 @@
         "tabWidth": 2,
         "useTabs": false,
         "singleQuote": false,
-        "semi": false
+        "semi": true,
+        "trailingComma": es5
       }
     }
   ]
