--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Test
         run: |
-          go test -v ./... -coverprofile=coverage.txt -covermode=atomic -coverpkg $(go list ./... | grep -v test | tr "\n" ",")
+          go test -v ./... -shuffle=on -coverprofile=coverage.txt -covermode=atomic -coverpkg $(go list ./... | grep -v test | tr "\n" ",")
           excludelist="$(find ./ -type f -name '*.go' | xargs grep -l 'DONTCOVER')"
           for filename in ${excludelist}; do
             filename=$(echo $filename | sed 's/^../github.com\/Sifchain\/sifnode/g')
