--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,6 +15,8 @@ jobs:
         run: sudo add-apt-repository -y ppa:ethereum/ethereum && sudo apt-get update && sudo apt-get install ethereum
       - name: install smart contracts first
         run: make install-smart-contracts
+      - name: install sifchain binary
+        run: make install
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3.2.0
         with:
