--- a/.golangci.yml
+++ b/.golangci.yml
@@ -38,3 +38,10 @@ issues:
     - text: "don't use an underscore in package name"
       linters:
         - revive
+
+linters-settings:
+  nolintlint:
+    allow-unused: false
+    allow-leading-space: true
+    require-explanation: false
+    require-specific: true
