--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,13 +9,13 @@ jobs:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.18
+          go-version: ^1.19
         id: go
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
 
-      - name: Build
+      - name: Buildgo
         run: make install
 
       - name: Test
