--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,9 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: ^1.19
+          go-version: '1.19.7'
+          check-latest: false
         id: go
 
       - name: Check out code into the Go module directory
