--- a/.github/workflows/integrationtest3.yml
+++ b/.github/workflows/integrationtest3.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           repository: Sifchain/sifchain-devops
           path: deploy
