--- a/.github/workflows/integrationtest1.yml
+++ b/.github/workflows/integrationtest1.yml
@@ -23,6 +23,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 'v16.20.2'
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.18.10'
       - name: Set up linux environment
         run: # installs development tools and updates .bash_profile
           bash test/integration/setup-linux-environment.sh
