--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,7 +17,8 @@ builds:
       - -trimpath
     ldflags:
       - -X github.com/cosmos/cosmos-sdk/version.Name=sifchain
-      - -X github.com/cosmos/cosmos-sdk/version.AppName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ServerName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ClientName=sifnoded
       - -X github.com/cosmos/cosmos-sdk/version.Version={{ .Version }}
       - -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }}
       - -X github.com/cosmos/cosmos-sdk/version.BuildTags=ledger
@@ -38,7 +39,8 @@ builds:
       - -trimpath
     ldflags:
       - -X github.com/cosmos/cosmos-sdk/version.Name=sifchain
-      - -X github.com/cosmos/cosmos-sdk/version.AppName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ServerName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ClientName=sifnoded
       - -X github.com/cosmos/cosmos-sdk/version.Version=v{{ .Version }}
       - -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }}
       - -X github.com/cosmos/cosmos-sdk/version.BuildTags=ledger
@@ -58,7 +60,8 @@ builds:
       - -trimpath
     ldflags:
       - -X github.com/cosmos/cosmos-sdk/version.Name=sifchain
-      - -X github.com/cosmos/cosmos-sdk/version.AppName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ServerName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ClientName=sifnoded
       - -X github.com/cosmos/cosmos-sdk/version.Version=v{{ .Version }}
       - -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }}
       - -X github.com/cosmos/cosmos-sdk/version.BuildTags=ledger
@@ -78,7 +81,8 @@ builds:
       - -trimpath
     ldflags:
       - -X github.com/cosmos/cosmos-sdk/version.Name=sifchain
-      - -X github.com/cosmos/cosmos-sdk/version.AppName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ServerName=sifnoded
+      - -X github.com/cosmos/cosmos-sdk/version.ClientName=sifnoded
       - -X github.com/cosmos/cosmos-sdk/version.Version=v{{ .Version }}
       - -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }}
       - -X github.com/cosmos/cosmos-sdk/version.BuildTags=ledger
